--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
-          <img src="C:\Users\pc\Desktop\shrija jha portfolio\assets\img\me.jpg" class="img-fluid" alt="">
+          <img src="assets/img/me.jpg" class="img-fluid" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <p>Focused and enthusiastic developer with a keen interest in software development and artificial intelligence. By comprehensive exposure
